# links-shortener

./: .dockerignore  .env.example  .gitignore  .ruff.toml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2026_03_04_2114-a3859f0c41e8_first_migration.py
app/: main.py
app/api/: v1.py
app/core/: settings.py
app/core/exceptions/: exceptions.py  handlers.py
app/db/: database.py
app/features/shorter/: schemas.py
app/features/shorter/api/: __init__.py  routes.py
app/features/shorter/models/: links.py
app/features/shorter/services/: links.py  shortener.py
tests/: test_shortener.py
