[project]
name = "links-shorter"
version = "0.1.0"
description = ""
authors = [
    { name = "kami", email = "kamideathless@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic (>=1.18.4,<2.0.0)",
    "fastapi (>=0.135.1,<0.136.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "ruff (>=0.15.4,<0.16.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"